@startuml
package views.employee {
    class EmployeeInformationView {
    }

    class WorkDayInfoView 
    class LoginHistoryView
    class DayView
    class SessionLoginView
    class CalendarView{
    }
}

class javax.swing.JPanel

views.employee.EmployeeInformationView --|> javax.swing.JPanel
views.employee.WorkDayInfoView --|> javax.swing.JFrame
views.employee.LoginHistoryView --|> javax.swing.JFrame
views.employee.SessionLoginView --|> javax.swing.JPanel
views.employee.DayView --|> javax.swing.JPanel
views.employee.CalendarView --|> javax.swing.JPanel





@enduml